<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/fragment_recipe_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-100dp">

        <Button
            android:id="@+id/select_recipe_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#4CAF50"
            android:clickable="true"
            android:focusable="true"
            android:text="Add to meal"
            android:textSize="30sp">

        </Button>

    </RelativeLayout>
</LinearLayout>